# webkat

./: README.md  pyproject.toml
src/webkat/: application.py  interfaces.py  types.py
src/webkat/protocols/: base.py  lifespan.py
src/webkat/protocols/http/: __init__.py  protocol.py  request.py
src/webkat/protocols/http/response/: base.py  plain.py
src/webkat/util/: __init__.py  parse_headers.py  requires_app.py
