[project]
name = "webkat"
version = "0.1.0"
description = "Web framework designed for developers"
readme = "README.md"
authors = [
    { name = "Kuyugama", email = "mail.kuyugama@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fundi>=1.5.0",
    "multidict>=6.7.0",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[tool.black]
line-length=100

[tool.pyright]
reportImplicitStringConcatenation = false
reportUnusedCallResult = false
reportImportCycles = false
reportAny = false


