[project]
name = "webkat"
version = "0.0.1"
description = "Web framework designed for developers"
requires-python = ">=3.10"
readme = "README.md"
authors = [
    { name = "Kuyugama", email = "mail.kuyugama@gmail.com" }
]
license-files = ["LICENSE", "LICENSE.md"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Internet",
  "Typing :: Typed"
]
dependencies = [
    "fundi>=1.5.0",
    "multidict>=6.7.0",
    "uvicorn>=0.38.0",
]

[project.urls]
homepage = "https://github.com/KuyuCode/webkat"

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[tool.black]
line-length=100

[tool.pyright]
reportImplicitStringConcatenation = false
reportUnusedCallResult = false
reportImportCycles = false
reportAny = false

